// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Steps correct direction 1`] = `
<div
  class="v-steps v-steps--horizontal v-steps--only-one"
/>
`;

exports[`Component Steps correct slot 1`] = `
<div
  class="v-steps v-steps--auto v-steps--only-one"
>
  <div
    class="v-step v-step--auto"
  >
    <div
      class="v-step__head"
    >
      <span
        class="v-step__head-inner"
      >
        1
      </span>
    </div>
    <div
      class="v-step__main"
    >
      <div
        class="v-step__title"
      >
        1
      </div>
      <div
        class="v-step__description"
      >
        description 1
      </div>
    </div>
  </div>
   
  <div
    class="v-step v-step--auto"
  >
    <div
      class="v-step__head"
    >
      <span
        class="v-step__head-inner"
      >
        2
      </span>
    </div>
    <div
      class="v-step__main"
    >
      <div
        class="v-step__title"
      >
        test
      </div>
      <div
        class="v-step__description"
      >
        
            slot description test
          
      </div>
    </div>
  </div>
   
  <div
    class="v-step v-step--auto"
  >
    <div
      class="v-step__head"
    >
      <span
        class="v-step__head-inner"
      >
        0
      </span>
    </div>
    <div
      class="v-step__main"
    />
  </div>
</div>
`;

exports[`Component Steps default direction and empty slot 1`] = `
<div
  class="v-steps v-steps--auto v-steps--only-one"
/>
`;
